# find_sale_in_wishlist

./: .gitignore  Dockerfile  LICENSE.md  README.md  constraints.txt  lambda_function.py  requirements.txt  setup.cfg  setup.py  tasks.py  upload.sh  wish_list.html
docs/: design.md
find_sale_in_wish_list/: __init__.py  amazon_wish_list.py  cache.py  headless_chrome.py  notification.py
lambda_handler/: director_of_system.py  notifier.py  worker_of_item.py  worker_of_monitor.py
memorize/: __init__.py  cache.py
scraping/: amazon_wish_list.py  headless_chrome.py
templates/: template.yaml
tests/: test_amazon_wish_list.py  test_cache.py  test_headless_chrome.py  test_lambda_handler.py
