# -*- coding: utf-8 -*-
[aliases]
release = egg_info -Db ''

[bdist_wheel]
universal = 1

# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name = find_sale_in_wishlist
version = attr: find_sale_in_wishlist.VERSION
url = https://github.com/o-hayato/find_sale_in_wishlist
download_url =
project_urls =
author = o-hayato
author_email = preasper0+github@gmail.com
maintainer =
maintainer_email =
classifiers =
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = file: LICENSE
description='python boilerplate',
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
platforms = any
provides =
requires =
obsoletes =

# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
[options]
zip_safe = False
setup_requires =
python_requires = >=3.4
include_package_data = True
packages =
    find_sale_in_wishlist
    scraping
    memorize

[options.extras_require]
dev =
    pytest>=3
    coverage
    tox
    invoke
    wheel
    twine
    awscli
#    jupyter
docs =
    sphinx
    pallets-sphinx-themes
    sphinxcontrib-log-cabinet

[options.entry_points]
console_scripts =
    find_sale_in_wishlist = find_sale_in_wishlist.cli:main
#gui_scripts =

[tool:pytest]
minversion = 3.0
testpaths = tests

[coverage:run]
branch = True
source =
    find_sale_in_wishlist
    scraping
    memorize
    tests

[coverage:paths]
source =
    find_sale_in_wishlist
    .tox/*/lib/python*/site-packages/find_sale_in_wishlist
    .tox/pypy/site-packages/find_sale_in_wishlist

